@@ -1,3 +1,8 @@
+2021-08-20  Saleem Abdulrasool  <abdulras@google.com>
+
+	* fixedsizehash.h: Remove sys/cdefs.h include. Unconditionally
+	define STROF and CONCAT macros.
+
 2021-07-28  Mark Wielaard  <mark@klomp.org>
 
 	* system.h (reallocarray): New static inline fallback function.
